--- a/payment-orchestrator/src/main/resources/static/index.html
+++ b/payment-orchestrator/src/main/resources/static/index.html
@@ -12,6 +12,7 @@
         <header class="header">
             <h1>Payment Error Management Dashboard</h1>
             <div class="header-actions">
+                <button id="loadMockBtn" class="btn btn-secondary" style="margin-right: 10px;">Load Mock Data</button>
                 <button id="refreshBtn" class="btn btn-primary">Refresh</button>
             </div>
         </header>
